# Moeroid

./: .gitignore  CMakeLists.txt  README.md  download.ps1  moe.config.json  setup-runtime.ps1
.github/workflows/: build-windows.yml  setup-runtime.yml
App/: CMakeLists.txt  Main.cpp  logo.rc
App/Config/: MoeConfig.cpp  MoeConfig.h  StickState.cpp  StickState.h
App/LipSync/: LAppWavFileHandler.cpp  LAppWavFileHandler.hpp  LipSync.cpp  LipSync.h
App/Moe/: Moe.cpp  Moe.hpp
App/Process/: PythonProcess.cpp  PythonProcess.h
App/Sqlite/: SQLite.cpp  SQLite.h
App/Task/: LLMTTSWorker.cpp  LLMTTSWorker.h
App/UI/: Input.h  Input.ui
App/Util/: CubismHelper.cpp  CubismHelper.hpp
App/Win/: About.cpp  About.h  About.ui  HistoryView.cpp  HistoryView.h  HistoryView.ui  Input.cpp  Input.h  Input.ui  Live2DWidget.cpp  Live2DWidget.h  Output.cpp  Output.h  Systray.cpp  Systray.h
App/translations/: moe_en.ts  moe_ja_JP.ts  moe_zh_CN.ts
Chara/: README.md  neko  tsunndere
Data/: .gitignore  view_server.py
Data/templates/: index.html
Framework/src/Math/: CubismTargetPoint.cpp
Main/src/: Log.cpp  Log.hpp
Main/src/fine-grained/: Model.cpp  Model.hpp
Ollama/: .gitignore  README.md  create_neko.bat  neko
Resources/: .gitignore  test_model.py
Resources/liveroid/: .gitignore
Resources/whitecat/: .gitignore
Resources/猫耳幻丝/: ARKitFaceTrackerSettingBeta.json  items_pinned_to_model.json  momo.cdi3.json  momo.cfg  momo.moc3  momo.model3.json  momo.physics3.json  momo.prprl2d.json  momo.vtube.json  momo.xklive.json  作者：゙悅音幻絲
Resources/猫耳幻丝/expressions/: yanzhao.exp3.json
Resources/猫耳幻丝/livehimeConfig/: FaceTrackerMap.virtualhime  ModelInfo.virtualhime  RoleCustomInfo.virtualhime  ShortcutDatas.virtualhime
Resources/猫耳幻丝/motions/: idle.motion3.json
Resources/猫耳幻丝/预设/: 待机场景预设.can3
Runtime/: README.md
Scripts/: .gitignore  README.md  cfg.ini  config.py  export.bat  infer.bat  llm.py  llm_llama.py  main_cmdline.py  main_subprocess.py  main_subprocess_llama.py  requirements.txt  test.txt  vits_helper.py
Scripts/models/: .gitignore  README.md
Scripts/vits/: commons.py  inference_onnx.py  utils.py
Scripts/vits/text/: __init__.py  cleaners.py
